--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Logo designing
+                                    Logo Design
                                 </div>
                                 <div class="project-name">
                                     ImageNexx
@@ -192,7 +192,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Logo Designing
+                                    Logo Design
                                 </div>
                                 <div class="project-name">
                                     Prime Time Digital
@@ -207,7 +207,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Logo Designing
+                                    Logo Design
                                 </div>
                                 <div class="project-name">
                                     Music Rights Clearance
