--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">I got what you need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Having a background in administration and in computer science blabbla</p>
-                    <a href="#contact" class="btn btn-default btn-xl page-scroll" href="#contact"">Contact me!</a>
+                    <p class="text-faded">Having a background in administration and in computer science, I love everything that is related to technology and management. This is why i'm trying to mix my different knowledges to help people in their business!</p>
+                    <a href="#contact" class="btn btn-default btn-xl page-scroll">Contact me! </a>
                 </div>
             </div>
         </div>
@@ -110,28 +110,29 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
                         <h3>Web Development</h3>
-                        <p class="text-muted">blabla</p>
+                        <p class="text-muted">You need a website for your business? Don't hesitate to contact me to share your ideas!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-pencil wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Logo Design</h3>
-                        <p class="text-muted">blablabla</p>
+                        <p class="text-muted">Having a nice logo is very important. We can work together to build THE one!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-line-chart wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Marketing</h3>
-                        <p class="text-muted">blablabla</p>
+                        <i class="fa fa-4x fa-paperclip wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                        <h3>Administration</h3>
+                        <p class="text-muted">If you need someone to help you in marketing or human resources, I got many tips.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Made with Love</h3>
-                        <p class="text-muted">blablabla</p>
+                        <p class="text-muted">I'm a very passionnate person and I like to work with people. 
+                        </br>I love what I do!</p>
                     </div>
                 </div>
             </div>
@@ -141,69 +142,9 @@
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="./imagenexx.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Web Development
-                                </div>
-                                <div class="project-name">
-                                    www.imagenexx.com
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="./primetimedigital.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Web Developement
-                                </div>
-                                <div class="project-name">
-                                    Prime Time Digital
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="./imagenexxlogo.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Logo Design
-                                </div>
-                                <div class="project-name">
-                                    ImageNexx
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="./primetimedigitallogo.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Logo Design
-                                </div>
-                                <div class="project-name">
-                                    Prime Time Digital
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="musicrightsclearancelogo.jpg" class="img-responsive" alt="">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <a href="" class="portfolio-box">
+                        <img id="imageresource" src="musicrightsclearancelogo.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -216,16 +157,46 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-6 col-md-6 col-sm-12">
                     <a href="#" class="portfolio-box">
-                        <img src="logomarketing.jpg" class="img-responsive" alt="">
+                        <img src="./primetimedigitallogo.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Marketing 
+                                    Logo Design & Web Developement
                                 </div>
                                 <div class="project-name">
-                                    Prime Time Digital
+                                    www.ptimedigital.com
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <a href="#" class="portfolio-box">
+                        <img src="./imagenexxlogo.jpg" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Logo Design & Web Devlopment
+                                </div>
+                                <div class="project-name">
+                                    www.imagenexx.com
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                    <a href="#" class="portfolio-box">
+                        <img src="./helenelaurendeaulogo.png" class="img-responsive" alt="">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Logo Design & Web Devlopment
+                                </div>
+                                <div class="project-name">
+                                    Hélène Laurendeau - site web à venir
                                 </div>
                             </div>
                         </div>
@@ -239,7 +210,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Here is my CV</h2>
-                <a href="./cv.pdf" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <a href="./cv-gabrielle-le-sauteur.pdf" class="btn btn-default btn-xl wow tada">Download Now!</a>
             </div>
         </div>
     </aside>
@@ -253,12 +224,13 @@
                     <p>Ready to start your next project with me? That's great! Give me a call or send me an email and it will be a pleasure to get back to you :)</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>514-294-0169</p>
+                    <a href="tel:5142940169"><i class="fa fa-phone fa-3x wow bounceIn"></i><p>514-294-0169</p>
+                    </a>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:glesauteur@gmail.com">glesauteur@gmail.com</a></p>
+                    <a href="mailto:glesauteur@gmail.com"><i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i><p>glesauteur@gmail.com</p> 
+                    </a>
+                    
                 </div>
             </div>
         </div>
@@ -267,14 +239,10 @@
       <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <div id="social-icons">
-                    <a href="https://twitter.com/glesauteur">
-                    <img title="Twitter" alt="Twitter" src="twittericon.png" width="35" height="35" />
-                    </a>
-                    <a href="https://www.linkedin.com/in/glesauteur?trk=nav_responsive_tab_profile_pic">
-                    <img title="LinkedIn" alt="LinkedIn" src="linkedinicon.png" width="35" height="35" />
-                    </a>
-                </div>
+                <div class="social-icons">
+                    <a class="fa fa-twitter circle" title="" target="_blank" href="https://twitter.com/glesauteur"></a>
+                    <a class="fa fa-linkedin circle" title="" target="_blank" href="https://www.linkedin.com/in/glesauteur"></a>
+                </div>     
             </div>
         </div>
       </aside>
