--- a/index.html
+++ b/index.html
@@ -56,12 +56,6 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -76,8 +70,8 @@
             <div class="header-content-inner">
                 <h1>Gabrielle Le Sauteur</h1>
                 <hr>
-                <p>Web & Marketing development</p>
-                <a href="#portfolio" class="btn btn-primary btn-xl page-scroll">Take a look at my portfolio!</a>
+                <h2>Human Resources Student</h2>
+                <p><i>Montreal</i></p>
             </div>
         </div>
     </header>
@@ -86,131 +80,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">I got what you need!</h2>
+                    <h2 class="section-heading">A little bit about me!</h2>
                     <hr class="light">
-                    <p class="text-faded">Having a background in administration and in computer science, I love everything that is related to technology and management. This is why i'm trying to mix my different knowledges to help people in their business!</p>
+                    <p class="text-faded">Having a background in administration and in computer science, I love everything that is related to tech and management. Mixing my different knowledges to help people in their business is what I like!</p>
                     <a href="#contact" class="btn btn-default btn-xl page-scroll">Contact me! </a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
-                        <h3>Web Development</h3>
-                        <p class="text-muted">You need a website for your business? Don't hesitate to contact me to share your ideas!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-pencil wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Logo Design</h3>
-                        <p class="text-muted">Having a nice logo is very important. We can work together to build THE one!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paperclip wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Administration</h3>
-                        <p class="text-muted">If you need someone to help you in marketing or human resources, I got many tips.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">I'm a very passionnate person and I like to work with people. 
-                        </br>I love what I do!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <a href="" class="portfolio-box">
-                        <img id="imageresource" src="musicrightsclearancelogo.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Logo Design
-                                </div>
-                                <div class="project-name">
-                                    Music Rights Clearance
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <a href="#" class="portfolio-box">
-                        <img src="./primetimedigitallogo.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Logo Design & Web Developement
-                                </div>
-                                <div class="project-name">
-                                    www.ptimedigital.com
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <a href="#" class="portfolio-box">
-                        <img src="./imagenexxlogo.jpg" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Logo Design & Web Devlopment
-                                </div>
-                                <div class="project-name">
-                                    www.imagenexx.com
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <a href="#" class="portfolio-box">
-                        <img src="./helenelaurendeaulogo.png" class="img-responsive" alt="">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Logo Design & Web Devlopment
-                                </div>
-                                <div class="project-name">
-                                    Hélène Laurendeau - site web à venir
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Here is my CV</h2>
-                <a href="./cv-gabrielle-le-sauteur.pdf" class="btn btn-default btn-xl wow tada">Download Now!</a>
+                <h2>You want to know a bit more about my journey?</h2>
+                <a href="./cv-gabrielle-le-sauteur.pdf" class="btn btn-default btn-xl wow tada">Take a look at my CV</a>
             </div>
         </div>
     </aside>
