changement du fichier CV

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>You want to know a bit more about my journey?</h2>
-                <a href="./cv-gabrielle-le-sauteur.pdf" class="btn btn-default btn-xl wow tada">Take a look at my CV</a>
+                <a href="./CV - GabrielleLeSauteur.jpg" class="btn btn-default btn-xl wow tada">Take a look at my CV</a>
             </div>
         </div>
     </aside>
